add minimal frontend
